chore: additional case for missing role